--- a/work.html
+++ b/work.html
@@ -56,8 +56,8 @@
         <!--Recipes app using Next.js and Contentful-->
         <div class="row">
             <div class="col">
-            <h3>Recipes App</h3>\
-                <p>Coming soon...</p>></div>
+            <h3>Recipes App</h3>
+                <p>Coming soon...</p></div>
             <div class="col">
                 Image
             </div>
@@ -66,14 +66,14 @@
         <div class="row">
             <div class="col">Image</div>
             <div class="col">
-                <h3>React Dictionary App</h3>\
+                <h3>React Dictionary App</h3>
                 <p>Coming soon...</p>
             </div>
         </div>
         <!--React weather app-->
         <div class="row">
             <div class="col">
-                <h3>React Weather App</h3>\
+                <h3>React Weather App</h3>
                 <p>Fetches weather data from the SheCodes Weather API for the city searched or the user's current location.
                     Also displays forecast data for the next 6 days. Displays values in Celcius and Fahrenheit.
                 </p></div>
@@ -82,7 +82,10 @@
         <!--Plantly landing page-->
         <div class="row">
             <div class="col">Image</div>
-            <div class="col">"Plantly" is a fake concept for an app. I created a webpage to display information about the app using HTML, CSS and Bootstrap.</div>
+            <div class="col">
+                <h3>Bootstrap Static Webpage</h3>
+                <p>"Plantly" is a fake concept for an app. I created a webpage to display information about the app using HTML, CSS and Bootstrap.</p>
+            </div>
         </div>
     </div>
 </body>
