--- a/work.html
+++ b/work.html
@@ -71,7 +71,7 @@
             </div>
         </div>
         <!--React weather app-->
-        <div class="row">
+        <div class="row justify-content-evenly">
             <div class="col">
                 <h3>React Weather App</h3>
                 <p>Fetches weather data from the SheCodes Weather API for the city searched or the user's current location.
@@ -84,7 +84,8 @@
             <div class="col">Image</div>
             <div class="col">
                 <h3>Bootstrap Static Webpage</h3>
-                <p>"Plantly" is a fake concept for an app. I created a webpage to display information about the app using HTML, CSS and Bootstrap.</p>
+                <p>"Plantly" is a fake concept for an app.
+                    I created a webpage to display information about the app using HTML, CSS and Bootstrap.</p>
             </div>
         </div>
     </div>
