added bootstrap webpage link and image

--- a/work.html
+++ b/work.html
@@ -71,7 +71,7 @@
             </div>
         </div>
         <!--React weather app-->
-        <div class="row justify-content-evenly">
+        <div class="row">
             <div class="col">
                 <h3>React Weather App</h3>
                 <p>Fetches weather data from the SheCodes Weather API for the city searched or the user's current location.
@@ -81,7 +81,9 @@
         </div>
         <!--Plantly landing page-->
         <div class="row">
-            <div class="col">Image</div>
+            <div class="col">
+           <a href="https://sophieweeden1.github.io/plantlyapp-site-concept/"> <img src="images/plantly-screenshot.png"></a> alt="screenshot of webpage">            
+        </div>
             <div class="col">
                 <h3>Bootstrap Static Webpage</h3>
                 <p>"Plantly" is a fake concept for an app.
