edited image max-width

--- a/work.html
+++ b/work.html
@@ -82,7 +82,7 @@
         <!--Plantly landing page-->
         <div class="row">
             <div class="col">
-           <a href="https://sophieweeden1.github.io/plantlyapp-site-concept/"> <img src="images/plantly-screenshot.png"></a> alt="screenshot of webpage">            
+           <a href="https://sophieweeden1.github.io/plantlyapp-site-concept/"> <img src="images/plantly-screenshot.png" alt="screenshot of webpage" class="screenshot"></a>             
         </div>
             <div class="col">
                 <h3>Bootstrap Static Webpage</h3>
