--- a/work.html
+++ b/work.html
@@ -76,7 +76,8 @@
                 <h3>React Weather App</h3>
                 <p>Fetches weather data from the SheCodes Weather API for the city searched or the user's current location.
                     Also displays forecast data for the next 6 days. Displays values in Celcius and Fahrenheit.
-                </p></div>
+                </p>
+            <a href="https://github.com/sophieweeden1/react-weather-app">View on GitHub</a></div>
             <div class="col">Image</div>
         </div>
         <!--Plantly landing page-->
@@ -88,6 +89,7 @@
                 <h3>Bootstrap Static Webpage</h3>
                 <p>"Plantly" is a fake concept for an app.
                     I created a webpage to display information about the app using HTML, CSS and Bootstrap.</p>
+                    <a href="https://github.com/sophieweeden1/plantlyapp-site-concept">View on GitHub</a>
             </div>
         </div>
     </div>
