--- a/work.html
+++ b/work.html
@@ -57,7 +57,7 @@
         <!--Recipes app using Next.js and Contentful-->
         <div class="row">
             <div class="col">
-            <h3>Recipes App</h3>
+            <h3>Next.js & Contentful Recipes App</h3>
                 <p>Coming soon...</p></div>
             <div class="col">
                 Image
