added coming soon images for unfinished projects

--- a/work.html
+++ b/work.html
@@ -60,13 +60,15 @@
             <h3>Next.js & Contentful Recipes App</h3>
                 <p>Coming soon...</p></div>
             <div class="col">
-                Image
+                <img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot">
             </div>
         </div>
         <br>
         <!--React dictionary app-->
         <div class="row">
-            <div class="col">Image</div>
+            <div class="col">
+                <img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot">
+            </div>
             <div class="col">
                 <h3>React Dictionary App</h3>
                 <p>Coming soon...</p>
@@ -81,7 +83,7 @@
                     Also displays forecast data for the next 6 days. Displays values in Celcius and Fahrenheit.
                 </p>
             <a href="https://github.com/sophieweeden1/react-weather-app">View on GitHub</a></div>
-            <div class="col">Image</div>
+            <div class="col"><img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot"></div>
         </div>
         <br>
         <!--Plantly landing page-->
@@ -92,7 +94,8 @@
             <div class="col">
                 <h3>Bootstrap Static Webpage</h3>
                 <p>"Plantly" is a fake concept for an app.
-                    I created a webpage to display information about the app using HTML, CSS and Bootstrap.</p>
+                    I created a webpage to display information about the app using HTML, CSS and Bootstrap.
+                I also created the app mockup on Canva.</p>
                     <a href="https://github.com/sophieweeden1/plantlyapp-site-concept">View on GitHub</a>
             </div>
         </div>
