fixed css class

--- a/work.html
+++ b/work.html
@@ -60,14 +60,14 @@
             <h3>Next.js & Contentful Recipes App</h3>
                 <p>Coming soon...</p></div>
             <div class="col">
-                <img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot grow">
+                <img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot">
             </div>
         </div>
         <br>
         <!--React dictionary app-->
         <div class="row">
             <div class="col">
-                <img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot grow">
+                <img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot">
             </div>
             <div class="col">
                 <h3>React Dictionary App</h3>
@@ -83,13 +83,13 @@
                     Also displays forecast data for the next 6 days. Displays values in Celcius and Fahrenheit.
                 </p>
             <a href="https://github.com/sophieweeden1/react-weather-app">View on GitHub</a></div>
-            <div class="col"><img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot grow"></div>
+            <div class="col"><img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot"></div>
         </div>
         <br>
         <!--Plantly landing page-->
         <div class="row">
             <div class="col">
-           <a href="https://sophieweeden1.github.io/plantlyapp-site-concept/"> <img src="images/plantly-screenshot.png" alt="screenshot of webpage" class="screenshot grow"></a>             
+           <a href="https://sophieweeden1.github.io/plantlyapp-site-concept/"> <img src="images/plantly-screenshot.png" alt="screenshot of webpage" class="screenshot"></a>             
         </div>
             <div class="col">
                 <h3>Bootstrap Static Webpage</h3>
