--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
             <div class="col">
             <h3>Next.js & Contentful Recipes App</h3>
                 <p>Coming soon...</p></div>
-            <div class="col">
+            <div class="col grow">
                 <img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot">
             </div>
         </div>
