--- a/work.html
+++ b/work.html
@@ -66,7 +66,7 @@
         <br>
         <!--React dictionary app-->
         <div class="row">
-            <div class="col">
+            <div class="col grow">
                 <img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot">
             </div>
             <div class="col">
@@ -83,12 +83,14 @@
                     Also displays forecast data for the next 6 days. Displays values in Celcius and Fahrenheit.
                 </p>
             <a href="https://github.com/sophieweeden1/react-weather-app">View on GitHub</a></div>
-            <div class="col"><img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot"></div>
+            <div class="col grow">
+                <img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot">
+            </div>
         </div>
         <br>
         <!--Plantly landing page-->
         <div class="row">
-            <div class="col">
+            <div class="col grow">
            <a href="https://sophieweeden1.github.io/plantlyapp-site-concept/"> <img src="images/plantly-screenshot.png" alt="screenshot of webpage" class="screenshot"></a>             
         </div>
             <div class="col">
