Added navbars to all pages

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
    </div>
    <div class="row">
        <p>
-        My name is Sophie - I'm a self-taught web developer from Milton Keynes,
+        My name is Sophie - I'm a self-taught web developer based Milton Keynes,
         UK. I'm a Senior Technical Recruiter for a digital agency
-        called Somo, and I'm hoping to transition over to the engineering team
-        some time soon. 
-        At the moment I'm focusing my attention on all things React, and also diving into Next.js with Contentful.
+        called CI&T, and I'm hoping to transition over to the engineering team
+        some time soon. </p>
+       <p> At the moment I'm focusing my attention on all things React, and also diving into Next.js with Contentful.
         You can learn more about me <a href="/about.html">here</a>.
       </p>
    </div>
