Created main structure of about page

--- a/about.html
+++ b/about.html
@@ -55,5 +55,16 @@
         </div>
       </nav>
     
+      <div class="container">
+        <div class="row">
+            <div class="col">
+                <img src="/images/IMG_9205.PNG" alt="memoji-waving" class="about-memoji">
+            </div>
+            <div class="col">
+                <h2>Hi there!</h2>
+                <p>I'm Sophie Weeden - a front end developer based in Milton Keynes, UK.</p>
+            </div>
+        </div>
+      </div>
 </body>
 </html>
