--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
       </nav>
     
       <div class="container">
-        <div class="row">
+        <div class="row align-items-center">
             <div class="col">
                 <img src="/images/IMG_9205.PNG" alt="memoji-waving" class="about-memoji">
             </div>
