--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
 <!--Title section-->      
           <h1>Hi, I'm Sophie.</h1>
           <h2>Front End Developer</h2>
-       
+       <div class="grow">
           <img src="/images/IMG_9206.PNG" alt="memoji waving" class="memoji" />
+        </div>
 <!--About me-->
 <div class="container about">
    <div class="row">
