--- a/about.html
+++ b/about.html
@@ -65,8 +65,15 @@
                 <p>I'm Sophie Weeden - a soon-to-be front end developer based in Milton Keynes, UK.</p>
                 <p>I started my journey in tech recruitment where I spend most days talking to developers about exciting new opportunities. I had this idea that coding would be super difficult and you needed to be a maths whizz (which I am certainly not!) in order to succeed.Despite this I have always been intrigued so decided to give it a go on Codecademy. <br>
                     I was quickly hooked and worked my way through HTML, CSS and JavaScript basics. Fast forward to now- I'm getting more confident with React each week, and I'm excited to move over to my company's engineering team this year!
-                
                 </p>
+
+                <h3>Courses/Certificates I've completed</h3>
+                <ul>
+                    <li>SheCodes Basics</li>
+                    <li>SheCodes Plus</li>
+                    <li>SheCodes Responsive</li>
+                    <li>SheCodes React</li>
+                </ul>
             </div>
         </div>
       </div>
