--- a/about.html
+++ b/about.html
@@ -64,8 +64,8 @@
                 <br>
                 <h2>Hi there!</h2>
                 <p>I'm Sophie Weeden - a soon-to-be front end developer based in Milton Keynes, UK.</p>
-                <p>I started my journey in tech recruitment where I spend most days talking to developers about exciting new opportunities. I had this idea that coding would be super difficult and you needed to be a maths whizz (which I am certainly not!) in order to succeed.Despite this I have always been intrigued so decided to give it a go on Codecademy. <br>
-                    I was quickly hooked and worked my way through HTML, CSS and JavaScript basics. Fast forward to now- I'm getting more confident with React each week, and I'm excited to move over to my company's engineering team this year!
+                <p>I started my journey in tech recruitment where I spend most days talking to developers about exciting new opportunities. I have always been intrigued by the world of tech, so I decided to give coding a go on Codecademy. <br>
+                    I was quickly hooked and worked my way through HTML, CSS and JavaScript basics. Fast forward to now- I'm getting more confident with React each week, and I'm excited to hopefully move over to my company's engineering team this year!
                 </p>
 
                 <h3>Courses I've completed</h3>
@@ -75,6 +75,8 @@
                     <li>SheCodes Responsive (certificate pending)</li>
                     <li>SheCodes React (Estimated completion Jan 2023)</li>
                 </ul>
+                <h3>Want to learn more about my experience?</h3>
+                <button>View my CV</button>
             </div>
         </div>
       </div>
