--- a/about.html
+++ b/about.html
@@ -65,19 +65,23 @@
                 <h2>Hi there!</h2>
                 <p>I'm Sophie Weeden - a soon-to-be front end developer based in Milton Keynes, UK.</p>
                 <p>I started my journey in tech recruitment where I spend most days talking to developers about exciting new opportunities. I have always been intrigued by the world of tech, so I decided to give coding a go on Codecademy. <br>
-                    I was quickly hooked and worked my way through HTML, CSS and JavaScript basics. Fast forward to now- I'm getting more confident with React each week, and I'm excited to hopefully move over to my company's engineering team this year!
+                    I was quickly hooked (no React pun intended) and worked my way through HTML, CSS and JavaScript basics. 
+                    I then found out about <a href="www.shecodes.com">SheCodes</a> via social media and enrolled on their Pro course, which teaches basic to intermediate level HTML, CSS, JavaScript and React. The course also covers version control, hosting using Netlify, CSS flexbox, Bootstrap and working with APIs.<br>
+                    Fast forward to now- I'm getting more confident with React each week, and I'm excited to hopefully move over to my current company's engineering team this year!
                 </p>
 
                 <h3>Courses I've completed</h3>
+                <p>Please follow the links to view the certificate for each course</p>
                 <ul>
                     <li>SheCodes Basics</li>
                     <li>SheCodes Plus</li>
                     <li>SheCodes Responsive (certificate pending)</li>
                     <li>SheCodes React (Estimated completion Jan 2023)</li>
                 </ul>
-                <h3>Want to learn more about my experience?</h3>
-                <button>View my CV</button>
+                
             </div>
+            <h3>Want to learn more about my experience?</h3>
+                <button>View my CV</button>
         </div>
       </div>
 </body>
