--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
             <div class="col">
                 <img src="/images/IMG_9205.PNG" alt="memoji-waving" class="about-memoji">
             </div>
-            <div class="col">
+            <div class="col about-text">
                 <br>
                 <h2>Hi there!</h2>
                 <p>I'm Sophie Weeden - a soon-to-be front end developer based in Milton Keynes, UK.</p>
