--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                     <li>SheCodes React (Estimated completion Jan 2023)</li>
                 </ul>
             <h3>Want to learn more about my experience?</h3>
-                <button>View my CV</button>
+                <button class="cv-button">View my CV</button>
         </div>
       </div>
 </body>
