added course certificates

--- a/about.html
+++ b/about.html
@@ -76,6 +76,12 @@
                 
             </div>
             <h3>Courses I've completed</h3>
+            <div class="row">
+                <div class="col"><img src="/images/shecodes-basics.png" alt="SheCodes Basics certificate" class="certificate"></div>
+                <div class="col"><img src="/images/shecodes-plus.png" alt="SheCodes Plus certificate" class="certificate"></div>
+                <div class="col"><img src="/images/coming-soon.jpeg" alt="SheCodes Responsive" class="certificate"></div>
+                <div class="col"><img src="/images/coming-soon.jpeg" alt="SheCodes React" class="certificate"></div>
+            </div>
                 <p>Please follow the links to view the certificate for each course</p>
                 <ul>
                     <li>SheCodes Basics</li>
