--- a/about.html
+++ b/about.html
@@ -77,8 +77,8 @@
             </div>
             <h3>Courses I've completed</h3>
             <div class="row">
-                <div class="col grow"><img src="/images/shecodes-basics.png" alt="SheCodes Basics certificate" class="certificate"></div>
-                <div class="col grow"><img src="/images/shecodes-plus.png" alt="SheCodes Plus certificate" class="certificate"></div>
+                <div class="col grow"><a href="https://www.shecodes.io/certificates/930e583ec7b906f0fd8acdabba6ab1f0" target="_blank"><img src="/images/shecodes-basics.png" alt="SheCodes Basics certificate" class="certificate"></a></div>
+                <div class="col grow"><a href="https://www.shecodes.io/certificates/bd59b834187d1e6b5a1b8b7587e376d5" target="_blank"><img src="/images/shecodes-plus.png" alt="SheCodes Plus certificate" class="certificate"></a></div>
                 <div class="col grow"><img src="/images/coming-soon.jpeg" alt="SheCodes Responsive" class="certificate"></div>
                 <div class="col grow"><img src="/images/coming-soon.jpeg" alt="SheCodes React" class="certificate"></div>
             </div>
