--- a/about.html
+++ b/about.html
@@ -83,8 +83,9 @@
                 <div class="col grow"><img src="/images/coming-soon.jpeg" alt="SheCodes React" class="certificate"></div>
             </div>
                 <br>
+                <!--
             <h3>Want to learn more about my experience?</h3>
-                <button class="cv-button">View my CV</button>
+                <button class="cv-button">View my CV</button>-->
                 <br>
         </div>
       </div>
