--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,6 @@
           </div>
         </div>
       </nav>
-    <img src="/images/IMG_9207.PNG" alt="contact memoji">
+    <img src="/images/IMG_9207.PNG" alt="contact memoji" class="contact-memoji">
 </body>
 </html>
