--- a/about.html
+++ b/about.html
@@ -39,10 +39,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">About</a>
+                <a class="nav-link active" aria-current="page" href="#">About</a>
               </li>
                <li class="nav-item">
                 <a class="nav-link" href="/work.html">Work</a>
