--- a/work.html
+++ b/work.html
@@ -19,22 +19,22 @@
     <link rel="stylesheet" href="/styles/styles.css" />
     <script src="https://kit.fontawesome.com/9a46f8b79d.js" crossorigin="anonymous"></script>
 </head>
-<body><!--Navbar-->
+<body>
+    <!--Navbar-->
     <nav class="navbar sticky-top navbar-expand-lg">
-      <div class="container-fluid">
-        
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
