--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     
     <div class="container-fluid learn-more">
         <div class="row"><h2>Want to work with me?</h2></div>
-      <div class="row justify-content-center"><button class="index-contact contact-button">Contact me here</button></div>
+      <div class="row justify-content-center"><a href="contact.html"><button class="index-contact contact-button">Contact me here</button></a></div>
       
     </div>
     <!-- JavaScript Bundle with Popper -->
