created html form

--- a/contact.html
+++ b/contact.html
@@ -54,5 +54,18 @@
         </div>
       </nav>
     <img src="/images/IMG_9207.PNG" alt="contact memoji" class="contact-memoji">
+    <h1>Drop me a message</h1>
+    <h2>Send e-mail to someone@example.com:</h2>
+
+<form action="mailto:sophieweeden@me.com" method="post" enctype="text/plain">
+Name:<br>
+<input type="text" name="name"><br>
+E-mail:<br>
+<input type="text" name="mail"><br>
+Comment:<br>
+<input type="text" name="comment" size="50"><br><br>
+<input type="submit" value="Send">
+<input type="reset" value="Reset">
+</form>
 </body>
 </html>
