--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
       </nav>
     <img src="/images/IMG_9207.PNG" alt="contact memoji" class="contact-memoji">
     <h1>Drop me a message</h1>
-  
+  <h2>Send me an email using the form below:</h2>
 
 <form action="mailto:sophieweeden@me.com" method="post" enctype="text/plain">
 Name:<br>
