--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,8 @@ Name:<br>
 <input type="text" name="name"><br>
 E-mail:<br>
 <input type="text" name="mail"><br>
-Comment:<br>
-<input type="text" name="comment" size="50"><br><br>
+Message:<br>
+<input type="text" name="message" size="100"><br><br>
 <input type="submit" value="Send">
 <input type="reset" value="Reset">
 </form>
