--- a/contact.html
+++ b/contact.html
@@ -55,17 +55,8 @@
       </nav>
     <img src="/images/IMG_9207.PNG" alt="contact memoji" class="contact-memoji">
     <h1>Drop me a message</h1>
-  <h2>Send me an email using the form below:</h2>
-
-<form action="mailto:sophieweeden@me.com" method="post" enctype="text/plain">
-Name:<br>
-<input type="text" name="name"><br>
-E-mail:<br>
-<input type="text" name="mail"><br>
-Message:<br>
-<input type="text" name="message" size="100"><br><br>
-<input type="submit" value="Send">
-<input type="reset" value="Reset">
-</form>
+    <h3>sophieweeden@me.com</h3>
+    <a href="https://www.linkedin.com/in/sophie-weeden-33b810151/"><h3>LinkedIn</h3></a>
+  
 </body>
 </html>
