--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,10 @@
     <img src="/images/IMG_9207.PNG" alt="contact memoji" class="contact-memoji">
     <h1>Drop me a message</h1>
     <h3>sophieweeden@me.com</h3>
-    <a href="https://www.linkedin.com/in/sophie-weeden-33b810151/"><h3>LinkedIn</h3></a>
-  
+    <div class="row">
+        <div class="col">
+    <a href="https://www.linkedin.com/in/sophie-weeden-33b810151/"><h3>LinkedIn</h3></a></div>
+    <div class="col"><a href="https://github.com/sophieweeden1">GitHub</a></div>
+</div>
 </body>
 </html>
