--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
     <div class="row">
         <div class="col">
     <a href="https://www.linkedin.com/in/sophie-weeden-33b810151/"><h3>LinkedIn</h3></a></div>
-    <div class="col"><a href="https://github.com/sophieweeden1">GitHub</a></div>
+    <div class="col"><a href="https://github.com/sophieweeden1"><h3>GitHub</h3></a></div>
 </div>
 </body>
 </html>
