--- a/contact.html
+++ b/contact.html
@@ -56,10 +56,11 @@
     <img src="/images/IMG_9207.PNG" alt="contact memoji" class="contact-memoji">
     <h1>Drop me a message</h1>
     <h3>sophieweeden@me.com</h3>
-    <div class="row justify-content-center">
-        <div class="col">
-    <a href="https://www.linkedin.com/in/sophie-weeden-33b810151/"><h3>LinkedIn</h3></a></div>
-    <div class="col"><a href="https://github.com/sophieweeden1"><h3>GitHub</h3></a></div>
+    
+      <div>
+   <h3> <a href="https://www.linkedin.com/in/sophie-weeden-33b810151/">LinkedIn</a> | <a href="https://github.com/sophieweeden1">GitHub</a></h3>
+    
+</div>  
 </div>
 </body>
 </html>
