--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
     <h3>sophieweeden@me.com</h3>
     
       <div>
-   <h3> <a href="https://www.linkedin.com/in/sophie-weeden-33b810151/">LinkedIn</a> | <a href="https://github.com/sophieweeden1">GitHub</a></h3>
+   <h3> <a href="https://www.linkedin.com/in/sophie-weeden-33b810151/" target="_blank">LinkedIn</a> | <a href="https://github.com/sophieweeden1" target="_blank">GitHub</a></h3>
     
 </div>  
 </div>
