added react weather project image

--- a/work.html
+++ b/work.html
@@ -84,7 +84,7 @@
                 </p>
             <a href="https://github.com/sophieweeden1/react-weather-app">View on GitHub</a></div>
             <div class="col grow">
-                <img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot">
+                <img src="/images/react-weather" alt="coming soon" class="screenshot">
             </div>
         </div>
         <br>
