--- a/work.html
+++ b/work.html
@@ -79,12 +79,12 @@
         <div class="row">
             <div class="col">
                 <h3>React Weather App</h3>
-                <p>Fetches weather data from the SheCodes Weather API for the city searched or the user's current location.
-                    Also displays forecast data for the next 6 days. Displays values in Celcius and Fahrenheit.
+                <p>Fetches weather data from the SheCodes Weather API for the city searched.
+                    Also displays forecast data for the next 5 days. Displays values in Celcius and Fahrenheit.
                 </p>
             <a href="https://github.com/sophieweeden1/react-weather-app">View on GitHub</a></div>
             <div class="col grow">
-                <img src="/images/react-weather" alt="coming soon" class="screenshot">
+                <img src="/images/react-weather.png" alt="coming soon" class="screenshot">
             </div>
         </div>
         <br>
