--- a/work.html
+++ b/work.html
@@ -84,7 +84,7 @@
                 </p>
             <a href="https://github.com/sophieweeden1/react-weather-app">View on GitHub</a></div>
             <div class="col grow">
-                <img src="/images/react-weather.png" alt="coming soon" class="screenshot">
+                <a href="https://mellow-swan-7bb19b.netlify.app/"><img src="/images/react-weather.png" alt="coming soon" class="screenshot"></a>
             </div>
         </div>
         <br>
