added react cert

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                 <div class="col grow"><a href="https://www.shecodes.io/certificates/930e583ec7b906f0fd8acdabba6ab1f0" target="_blank"><img src="/images/shecodes-basics.png" alt="SheCodes Basics certificate" class="certificate"></a></div>
                 <div class="col grow"><a href="https://www.shecodes.io/certificates/bd59b834187d1e6b5a1b8b7587e376d5" target="_blank"><img src="/images/shecodes-plus.png" alt="SheCodes Plus certificate" class="certificate"></a></div>
                 <div class="col grow"><a href="https://www.shecodes.io/certificates/2ec166466c939962fed9f49f0554af5b" target="_blank"><img src="/images/shecodes-responsive.png" alt="SheCodes Responsive" class="certificate"></a></div>
-                <div class="col grow"><img src="/images/coming-soon.jpeg" alt="SheCodes React" class="certificate"></div>
+                <div class="col grow"><a href="https://www.shecodes.io/certificates/320e84eca844ee622a81e39816699b5e"><img src="images/shecodes-react.png" alt="SheCodes React" class="certificate"></a></div>
             </div>
                 <br>
                 <!--
