--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                 <p>I started my journey in tech recruitment where I spend most days talking to developers about exciting new opportunities. I have always been intrigued by the world of tech, so I decided to give coding a go on Codecademy. <br>
                     I was quickly hooked (no React pun intended) and worked my way through HTML, CSS and JavaScript basics. 
                     I then found out about <a href="https://shecodes.io" target="_blank">SheCodes</a> via social media and enrolled on their Pro course, which teaches basic to intermediate level HTML, CSS, JavaScript and React. The course also covers version control, hosting using Netlify, CSS flexbox, Bootstrap and working with APIs.<br>
-                    Fast forward to now- I'm getting more confident with React each week, and I'm excited to hopefully move over to my current company's engineering team this year! <br><br>
+                    Fast forward to now- I'm getting more confident with React each week, and I'm excited to hopefully secure my first engineering role soon! <br><br>
                     I'm really passionate about closing the gender gap in tech, so I'm a huge fan of the work SheCodes are doing to offer coding courses exclusively to women. A portion of the course price is donated to the SheCodes Foundation which allows women from less-developed countries to learn coding for free!
                     
                 </p>
