--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
        <p>
         My name is Sophie - I'm a self-taught web developer based Milton Keynes,
         UK. I'm a Senior Technical Recruiter for a digital agency
-        called CI&T, and I'm hoping to transition over to the engineering team
-        some time soon. </p>
+        called CI&T, and I'm hoping to secure my first Software Engineer position soon. </p>
        <p> At the moment I'm focusing my attention on all things React, and also diving into Next.js with Contentful.
         You can learn more about me <a href="/about.html">here</a>.
       </p>
