Redesigned index page

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:wght@200;400;800&family=Roboto:wght@100&display=swap" rel="stylesheet">
 
    <link rel="stylesheet" href="/styles/styles.css" />
-   <script src="https://kit.fontawesome.com/9a46f8b79d.js" crossorigin="anonymous"></script>
+   <script src="https://kit.fontawesome.com/0a03513dda.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Navbar-->
@@ -35,8 +35,8 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+          <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarNav">
+            <ul class="navbar-nav ">
               <li class="nav-item">
                 <a class="nav-link" href="index.html">Home</a>
               </li>
