--- a/index.html
+++ b/index.html
@@ -65,7 +65,52 @@
 </div>
 <hr>
 <div class="container work-title">
-<h2>Work</h2>
+<h2 id="work">Work</h2>
+</div>
+<div class="container">
+<!--React dictionary app-->
+<div class="row">
+    <div class="col grow">
+        <img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot">
+    </div>
+    <div class="col">
+        <h3>React Dictionary App</h3>
+        <p>Coming soon...</p>
+    </div>
+</div>
+<br>
+<!--React weather app-->
+<div class="row">
+    <div class="col">
+        <h3>React Weather App</h3>
+        <p>Fetches weather data from the SheCodes Weather API for the city searched.
+            Also displays forecast data for the next 5 days. Displays values in Celcius and Fahrenheit.
+        </p>
+    <a href="https://github.com/sophieweeden1/react-weather-app">View on GitHub</a></div>
+    <div class="col grow">
+        <a href="https://mellow-swan-7bb19b.netlify.app/" target="_blank"><img src="/images/react-weather.png" alt="coming soon" class="screenshot"></a>
+    </div>
+</div>
+<br>
+<!--Plantly landing page-->
+<div class="row">
+    <div class="col grow">
+   <a href="https://sophieweeden1.github.io/plantlyapp-site-concept/"> <img src="images/plantly-screenshot.png" alt="screenshot of webpage" class="screenshot"></a>             
+</div>
+    <div class="col">
+        <h3>Bootstrap Static Webpage</h3>
+        <p>"Plantly" is a fake concept for an app.
+            I created a webpage to display information about the app using HTML, CSS and Bootstrap.
+        I also created the app mockup on Canva.</p>
+            <a href="https://github.com/sophieweeden1/plantlyapp-site-concept">View on GitHub</a>
+    </div>
+</div>
+      
+
+    </div>
+
+ 
+ 
 </div>
 
     
