--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
 <hr>
 <div class="container work-title">
 <h2 id="work">Work</h2>
+<br>
 </div>
-<div class="container">
+<div class="container projects">
 <!--React dictionary app-->
 <div class="row">
     <div class="col grow">
@@ -81,7 +82,7 @@
 <br>
 <!--React weather app-->
 <div class="row">
-    <div class="col">
+    <div class="col-sm grow">
         <h3>React Weather App</h3>
         <p>Fetches weather data from the SheCodes Weather API for the city searched.
             Also displays forecast data for the next 5 days. Displays values in Celcius and Fahrenheit.
@@ -94,10 +95,10 @@
 <br>
 <!--Plantly landing page-->
 <div class="row">
-    <div class="col grow">
+    <div class="col-sm grow">
    <a href="https://sophieweeden1.github.io/plantlyapp-site-concept/"> <img src="images/plantly-screenshot.png" alt="screenshot of webpage" class="screenshot"></a>             
 </div>
-    <div class="col">
+    <div class="col-sm grow">
         <h3>Bootstrap Static Webpage</h3>
         <p>"Plantly" is a fake concept for an app.
             I created a webpage to display information about the app using HTML, CSS and Bootstrap.
