--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="col grow">
         <img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot">
     </div>
-    <div class="col">
+    <div class="col-sm">
         <h3>React Dictionary App</h3>
         <p>Coming soon...</p>
     </div>
@@ -83,13 +83,15 @@
 <!--React weather app-->
 <div class="row">
     <div class="col-sm grow">
-        <h3>React Weather App</h3>
-        <p>Fetches weather data from the SheCodes Weather API for the city searched.
-            Also displays forecast data for the next 5 days. Displays values in Celcius and Fahrenheit.
-        </p>
-    <a href="https://github.com/sophieweeden1/react-weather-app">View on GitHub</a></div>
+      <a href="https://mellow-swan-7bb19b.netlify.app/" target="_blank"><img src="/images/react-weather.png" alt="coming soon" class="screenshot"></a>
+      
     <div class="col grow">
-        <a href="https://mellow-swan-7bb19b.netlify.app/" target="_blank"><img src="/images/react-weather.png" alt="coming soon" class="screenshot"></a>
+      <h3>React Weather App</h3>
+      <p>Fetches weather data from the SheCodes Weather API for the city searched.
+          Also displays forecast data for the next 5 days. Displays values in Celcius and Fahrenheit.
+      </p>
+    <a href="https://github.com/sophieweeden1/react-weather-app">View on GitHub</a></div>
+
     </div>
 </div>
 <br>
