--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">About</a>
+              <a class="nav-link active" aria-current="page" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Projects</a>
+              <a class="nav-link active" aria-current="page" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Contact</a>
+              <a class="nav-link active" aria-current="page" href="#contact">Contact</a>
             </li>
           
           </ul>
@@ -60,7 +60,7 @@
 
 <div class="container about">
    
-    <h2>Hey 👋🏻, I'm Sophie Weeden - a self-taught front end developer, currently working as a Senior Technical Recruiter at CI&T.</h2>
+    <h2>Hey 👋🏻, I'm Sophie Weeden - a bootcamp-certified front end developer, currently working as a Senior Technical Recruiter at CI&T.</h2>
     <h2>I'm based in Milton Keynes/London 📍</h2>
 </div>
 <hr>
@@ -72,7 +72,7 @@
 <!--projects section
 
 -->
-<div class="container projects">
+<div class="container projects" id="projects">
 <!--React dictionary app-->
 <div class="row">
     <div class="col grow">
@@ -122,7 +122,17 @@
     </div>
 </div>
 <br>
+<hr>
+<div class="contact" id="contact">
+  <h2>See more</h2>
+  <ul class="contact-list">
+    <li>Linkedin</li>
+    <li>GitHub</li>
+    <li>Codepen</li>
+    <li>Spotify</li>
 
+  </ul>
+</div>
 
 
 
