added contact links

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
 <div class="contact" id="contact">
   <h2>See more</h2>
   <ul class="contact-list">
-    <li>Linkedin</li>
-    <li>GitHub</li>
-    <li>Codepen</li>
-    <li>Spotify</li>
+    <a href="https://www.linkedin.com/in/sophie-weeden-33b810151/" target="_blank"><li><i class="fa-brands fa-linkedin"></i> Linkedin</li></a>
+    <a href="https://github.com/sophieweeden1" target="_blank"><li><i class="fa-brands fa-github"></i> GitHub</li></a>
+   <a href="https://codepen.io/sophieweeden1/pens/" target="_blank"> <li><i class="fa-brands fa-codepen"></i> Codepen</li></a>
+   <a href="https://open.spotify.com/user/119127358?si=267a4fd51f8c429d" target="_blank"> <li><i class="fa-brands fa-spotify"></i> Spotify</li></a>
 
   </ul>
 </div>
