--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <br>
 <hr>
 <div class="contact" id="contact">
-  <h2>See more</h2>
+  <h2 class="see-more">See more</h2>
   <ul class="contact-list">
     <a href="https://www.linkedin.com/in/sophie-weeden-33b810151/" target="_blank"><li><i class="fa-brands fa-linkedin"></i> Linkedin</li></a>
     <a href="https://github.com/sophieweeden1" target="_blank"><li><i class="fa-brands fa-github"></i> GitHub</li></a>
@@ -132,14 +132,12 @@
    <a href="https://open.spotify.com/user/119127358?si=267a4fd51f8c429d" target="_blank"> <li><i class="fa-brands fa-spotify"></i> Spotify</li></a>
 
   </ul>
+  
 </div>
 
 
 
     </div>
-
- 
- 
 </div>
 
     
