--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="col grow">
         <img src="/images/coming-soon.jpeg" alt="coming soon" class="screenshot">
     </div>
-    <div class="col-sm">
+    <div class="col-sm grow">
         <h3>React Dictionary App</h3>
         <p>Coming soon... </p>
     </div>
