Added about me page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#about">About</a>
+              <a class="nav-link active" aria-current="page" href="/about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#projects">Projects</a>
@@ -61,7 +61,9 @@
 
 <div class="container about">
    
-    <h2>Hey 👋🏻, I'm Sophie Weeden - a bootcamp-certified front end developer, currently working as a Senior Technical Recruiter at CI&T.</h2>
+    <h2>Hey 👋🏻, I'm Sophie Weeden - a bootcamp-certified front end developer, currently working as a Senior Technical Recruiter at CI&T.
+      You can read more about me <a href="/about.html"> here</a>
+    </h2>
     <h2>I'm based in Milton Keynes/London 📍</h2>
 </div>
 <hr>
@@ -123,10 +125,10 @@
     </div>
 </div>
 <br>
-<hr>
 <div class="contact" id="contact">
   <div class="container work-title">
-  <h2>See more</h2>
+ \
+
 </div>
   <ul class="contact-list">
     <a href="https://www.linkedin.com/in/sophie-weeden-33b810151/" target="_blank"><li><i class="fa-brands fa-linkedin"></i> Linkedin</li></a>
