--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <div class="container about">
    
     <h2>Hey 👋🏻, I'm Sophie Weeden - a bootcamp-certified front end developer, currently working as a Senior Technical Recruiter at CI&T.
-      You can read more about me <a href="/about.html"> here</a>
+      You can read more about me <a href="/about.html"> here→</a>
     </h2>
     <h2>I'm based in Milton Keynes/London 📍</h2>
 </div>
@@ -127,7 +127,7 @@
 <br>
 <div class="contact" id="contact">
   <div class="container work-title">
- \
+ 
 
 </div>
   <ul class="contact-list">
